--- a/src/resources/css/style.css
+++ b/src/resources/css/style.css
@@ -170,6 +170,8 @@ html {
 }
 
 .rm {
+  display: flex;
+  flex-direction: column-reverse;
   text-decoration: none;
 }
 
@@ -207,6 +209,7 @@ html {
   list-style: none;
   align-items: flex-start;
   padding-right: 10px;
+  padding-bottom: 30px;
   margin-top: 20px;
   /* justify-content: right; */
 }
