--- a/src/resources/css/style.css
+++ b/src/resources/css/style.css
@@ -24,14 +24,21 @@ html {
   background-size: contain;
 }
 
-h3 {
-  color: rgb(94, 2, 2);
-}
-
 h5 {
   padding-top: 15px;
   color: rgb(94, 2, 2);
   padding-bottom: 5px;
+}
+
+.clearfix {
+  zoom: 1;
+}
+.clearfix:after {
+  content: ".";
+  clear: both;
+  display: block;
+  height: 0;
+  visibility: hidden;
 }
 
 /* ----------------------------- */
@@ -154,8 +161,9 @@ h5 {
   /* align-items: flex-end; */
 }
 
-.feature-header {
+h3 {
   padding-bottom: 10px;
+  color: rgb(0, 70, 0);
 }
 
 #f1 {
@@ -211,6 +219,7 @@ h5 {
   padding-top: 20px;
   padding-bottom: 10px;
   align-self: center;
+  color: rgb(0, 70, 0);
 }
 
 .archive-nav {
